--- a/pencegahan.html
+++ b/pencegahan.html
@@ -138,8 +138,8 @@
             </script> <b>indrijunanda</b> from <b>Indonesia</b> with <i class="fas fa-heart"></i></span>
         </div>
       </footer>
-      <script src="/assets/jquery/dist/jquery.min.js"></script>
-      <script src="/assets/bootstrap/dist/js/bootstrap.min.js"></script>
-      <script src="/assets/@fortawesome/fontawesome-free/js/all.min.js"></script>
+      <script src="assets/jquery/dist/jquery.min.js"></script>
+      <script src="assets/bootstrap/dist/js/bootstrap.min.js"></script>
+      <script src="assets/@fortawesome/fontawesome-free/js/all.min.js"></script>
 </body>
 </html>
