--- a/provinsi.html
+++ b/provinsi.html
@@ -63,9 +63,9 @@
     </div>
   </footer>
 
-  <script src="/assets/jquery/dist/jquery.min.js"></script>
-  <script src="/assets/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="/assets/@fortawesome/fontawesome-free/js/all.min.js"></script>
+  <script src="assets/jquery/dist/jquery.min.js"></script>
+  <script src="assets/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="assets/@fortawesome/fontawesome-free/js/all.min.js"></script>
   <script src="assets/index.min.js"></script>
 </body>
 
