--- a/pencegahan.html
+++ b/pencegahan.html
@@ -42,7 +42,7 @@
             </div>
         </div>
     </nav>
-    <header class="py-5 bg-image-full" style="background-image: url('/img/freepick_3611116.png');">
+    <header class="py-5 bg-image-full" style="background-image: url('/cekcovid19id/img/freepick_3611116.png');">
         <h1 class="text-center provinsi">PENCEGAHAN COVID-19</h1>
         <p class="text-center text-white"><b>#DIRUMAHAJA</b></p>
     </header>
