--- a/provinsi.html
+++ b/provinsi.html
@@ -44,7 +44,7 @@
     </div>
   </nav>
 
-  <header class="py-5 bg-image-full" style="background-image: url('/img/freepick_3611116.png');">
+  <header class="py-5 bg-image-full" style="background-image: url('/cekcovid19id/img/freepick_3611116.png');">
     <h1 class="text-center provinsi">DATA COVID-19 PER-PROVINSI</h1>
     <p class="text-center text-white"><b>#DIRUMAHAJA</b></p>
   </header>
