--- a/provinsi.html
+++ b/provinsi.html
@@ -18,7 +18,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-danger static-top">
     <div class="container">
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand" href="index.html">
         <img src="img/Logo_White.png" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link navbar-home" href="/">Beranda</a>
+            <a class="nav-link navbar-home" href="index.html">Beranda</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link navbar-home" href="provinsi.html">Data Per-Provinsi</a>
