--- a/pencegahan.html
+++ b/pencegahan.html
@@ -78,10 +78,10 @@
             <div class="col-lg-12 mb-3">
                 <b>Pencegahan COVID-19</b>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 mt-3">
                 <img src="img/freepick_3688262.jpg" alt="Social Distancing" class="img-fluid">
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 mt-3">
                 <img src="img/freepick_3877986.jpg" alt="Protect Family" class="img-fluid">
             </div>
         </div>
@@ -101,10 +101,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 mt-3">
                 <img src="img/freepick_3592537.jpg" alt="Stop Coronavirus" class="img-fluid">
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 mt-3">
                 <img src="img/freepick_3778945.jpg" alt="Pencegahan COVID-19" class="img-fluid">
             </div>
         </div>
