--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <script src="dist/jquery/dist/jquery.min.js"></script>
   <script src="dist/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="dist/@fortawesome/fontawesome-free/js/all.min.js"></script>
-  <script src="src/js/index.js"></script>
+  <script src="src/js/index.min.js"></script>
 </body>
 
 </html>
