--- a/pencegahan.html
+++ b/pencegahan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pencegahan - Cek COVID-19 Indonesia</title>
+    <title>Pencegahan COVID19 - Cek COVID-19 Indonesia</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <meta name="title" content="Cek Covid19 Indonesia">
