tambah data untuk provinsi

--- a/index.html
+++ b/index.html
@@ -2,140 +2,167 @@
 <html lang="en" class="h-100">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cek COVID-19 Indonesia</title>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-  <meta name="title" content="Cek Covid19 Indonesia">
-  <meta name="description"
-    content="Website informasi sederhana tentang COVID-19 Indonesia dan data per-provinsi Indonesia.">
-  <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="dist/bootstrap-icons/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="src/css/style.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cek COVID-19 Indonesia</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <meta name="title" content="Cek Covid19 Indonesia">
+    <meta name="description"
+        content="Website informasi sederhana tentang COVID-19 Indonesia dan data per-provinsi Indonesia.">
+    <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="dist/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="src/css/style.min.css">
 </head>
 
 <body class="d-flex flex-column h-100">
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white shadow-sm">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">
-        Cek COVID-19
-        <br>Indonesia
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="bi-list"></i>
-      </button>
-      <div class="collapse navbar-collapse justify-content-md-end" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link navbar-home" href="index.html">Beranda</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link navbar-home" href="provinsi.html">Data Statistik Provinsi</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <main>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6">
-          <h1 class="title-home">Cek COVID-19 Indonesia</h1>
-          <p>Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Indonesia.</p>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white shadow-sm">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">cekcovid19id
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="bi-list"></i>
+            </button>
+            <div class="collapse navbar-collapse justify-content-md-end" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link navbar-home" href="index.html">Beranda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbar-home" href="provinsi.html">Data Statistik Provinsi</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="col-lg-3">
-          <div class="card mb-3">
-            <div class="card-body ">
-                <h4>Call Center</h4>
-                <p>Nomor Darurat</p>
-                <div class="text-end">
-                  <span class="fs-1 fw-bold text-card"><i class="bi-telephone mr-5"></i> 119</span>
+    </nav>
+
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h1 class="title-home">Cek COVID-19 Indonesia</h1>
+                    <p>Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Indonesia.</p>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h4>Call Center</h4>
+                            <p>Nomor Darurat</p>
+                            <div class="d-flex justify-content-end mt-3">
+                                <span class="fs-1 fw-bold text-card"><i class="bi-telephone mr-5"></i> 119</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h6>Ikuti Perkembangan Seputar COVID-19 Dari Kemenkes RI</h6>
+                            <div class="d-flex justify-content-end mt-4">
+                                <span>
+                                    <a href="//facebook.com/KementerianKesehatanRI" class="fs-2 mx-2 text-card"><i
+                                            class="bi-facebook"></i></a>
+                                    <a href="//twitter.com/KemenkesRI" class="fs-2 mx-2 text-card"><i
+                                            class="bi-twitter"></i></a>
+                                    <a href="//instagram.com/kemenkes_ri/" class="fs-2 mx-2 text-card"><i
+                                            class="bi-instagram"></i></a>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="card mb-3">
-            <div class="card-body">
-                <h5>Ikuti Perkembangan Seputar COVID-19 Dari Kemenkes RI</h5>      
-                <div class="text-end">
-                  <span>
-                    <a href="//facebook.com/KementerianKesehatanRI" class="fs-2 mx-2 text-card"><i class="bi-facebook"></i></a>
-                    <a href="//twitter.com/KemenkesRI" class="fs-2 mx-2 text-card"><i class="bi-twitter"></i></a>
-                    <a href="//instagram.com/kemenkes_ri/" class="fs-2 mx-2 text-card"><i class="bi-instagram"></i></a>
-                  </span>
+            <hr>
+            <div class="row">
+                <div class="col-lg-12">
+                    <h5 class="fw-bold">Jumlah Kasus COVID-19 Indonesia Hari Ini</h5>
+                    <div id="terakhir-update"></div>
                 </div>
             </div>
-          </div>
-        </div>
-      </div>
-      <hr>
-      <div class="row">
-        <div class="col-lg-12">
-          <h5 class="fw-bold">Jumlah Kasus COVID-19 Indonesia Hari Ini</h5>
-          <div id="terakhir-update"></div>
-        </div>
-      </div>
-      <div class="row mt-4">
-        <div class="col-lg-3 mb-3">
-          <div class="card terkonfirmasi">
-            <div class="card-body">
-              <div class="card-title">
-                <h6 class="text-uppercase"><i class="fas fa-plus"></i> <b>Total Terkonfirmasi</b></h6>
-              </div>
-              <div id="konfirmasi"></div>
+            <div class="row mt-3">
+                <div class="col-lg-3 mb-3">
+                    <div class="card terkonfirmasi">
+                        <div class="card-body">
+                            <div class="card-title">
+                                <h6 class="text-uppercase"><i class="fas fa-plus"></i>Total Terkonfirmasi</h6>
+                            </div>
+                            <div class="text-center angka-kasus" id="konfirmasi"></div>
+                            <div class="d-flex justify-content-end" id="harian-konfirmasi"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mb-3">
+                    <div class="card kasus-aktif">
+                        <div class="card-body">
+                            <div class="card-title">
+                                <h6 class="text-uppercase"><i class="fas fa-hospital"></i>Kasus Aktif</h6>
+                            </div>
+                            <div class="text-center angka-kasus" id="dirawat"></div>
+                            <div class="d-flex justify-content-end" id="harian-dirawat"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mb-3">
+                    <div class="card sembuh">
+                        <div class="card-body">
+                            <div class="card-title">
+                                <h6 class="text-uppercase"><i class="far fa-smile"></i>Sembuh</h6>
+                            </div>
+                            <div class="text-center angka-kasus" id="sembuh"></div>
+                            <div class="d-flex justify-content-end" id="harian-sembuh"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mb-3">
+                    <div class="card meninggal">
+                        <div class="card-body">
+                            <div class="card-title">
+                                <h6 class="text-uppercase"><i class="far fa-frown"></i>Meninggal Dunia</h6>
+                            </div>
+                            <div class="text-center angka-kasus" id="meninggal-dunia"></div>
+                            <div class="d-flex justify-content-end" id="harian-meninggal-dunia"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="col-lg-3 mb-3">
-          <div class="card kasus-aktif">
-            <div class="card-body">
-              <div class="card-title">
-                <h6><i class="fas fa-hospital"></i> <b>Kasus Aktif</b></h6>
-              </div>
-              <div id="dirawat"></div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card provinsi">
+                        <div class="card-body">
+                            <div class="row p-3">
+                                <div class="col-lg-6">
+                                    <h3>Data Statistik Kasus COVID-19 Untuk Seluruh Provinsi Di Indinesia</h3>
+                                    <p>Data statistik kasus COVID-19 yang tersebar di 34 Provinsi di Indonesia</p>
+                                </div>
+                                <div class="col-lg-3 offset-lg-3">
+                                    <div class="d-flex justify-content-center p-4">
+                                        <a href="provinsi.html" class="btn btn-outline-primary btn-lg">
+                                            Lihat Data
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
+            <div class="row"></div>
         </div>
-        <div class="col-lg-3 mb-3">
-          <div class="card">
-            <div class="card-body">
-              <div class="card-title">
-                <h6><i class="far fa-smile"></i> <b>Sembuh</b></h6>
-              </div>
-              <div id="sembuh"></div>
-            </div>
-          </div>
+    </main>
+    <footer class="footer mt-auto py-3 bg-white">
+        <div class="container text-center">
+            <span> &copy; indrijunanda</span><br>
+            <span>Developed use <a href="//getbootstrap.com" class="text-primary">Bootstrap 5</a> and Hosted on <a
+                    href="//vercel.com" class="text-primary">Vercel</a></span>
         </div>
-        <div class="col-lg-3 mb-3" >
-          <div class="card">
-            <div class="card-body">
-              <div class="card-title">
-                <h6><i class="far fa-frown"></i> <b>Meninggal Dunia</b></h6>
-              </div>
-              <div id="meninggal-dunia"></div>
+    </footer>
 
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </main>
-  <footer class="footer mt-auto py-3 bg-white">
-    <div class="container text-center">
-      <span> &copy; indrijunanda</span><br>
-      <span>Developed use <a href="//getbootstrap.com" class="text-primary">Bootstrap 5</a> and Hosted on <a
-          href="//vercel.com" class="text-primary">Vercel</a></span>
-    </div>
-  </footer>
-
-  <script src="dist/bootstrap/js/bootstrap.min.js"></script>
-  <script src="dist/jquery/dist/jquery.min.js"></script>
-  <script src="dist/momentjs/moment-with-locales.min.js"></script>
-  <script src="src/js/index.js"></script>
+    <script src="dist/bootstrap/js/bootstrap.min.js"></script>
+    <script src="dist/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.13.4/jquery.mask.min.js"></script>
+    <script src="dist/momentjs/moment-with-locales.min.js"></script>
+    <script src="src/js/index.js"></script>
 </body>
 
 </html>
