major update, update to bootstrap 5

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="index.html">cekcovid19id
+            <a class="navbar-brand" href="/">cekcovid19id
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse justify-content-md-end" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link navbar-home" href="/">Beranda</a>
+                        <a class="nav-link navbar-home active" href="/">Beranda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link navbar-home" href="provinsi.html">Data Statistik Provinsi</a>
@@ -134,7 +134,7 @@
                         <div class="card-body">
                             <div class="row p-3">
                                 <div class="col-lg-6">
-                                    <h3>Data Statistik Kasus COVID-19 Untuk Seluruh Provinsi Di Indinesia</h3>
+                                    <h3>Data Statistik Kasus COVID-19 Untuk Seluruh Provinsi Di Indonesia</h3>
                                     <p>Data statistik kasus COVID-19 yang tersebar di 34 Provinsi di Indonesia</p>
                                 </div>
                                 <div class="col-lg-3 offset-lg-3">
@@ -151,10 +151,10 @@
             </div>
             <div class="row mt-3">
                 <h1 class="fs-2 fw-bold text-center mb-3">Yang harus kamu ketahui</h1>
-                <div class="col-lg-6 mt-3">
+                <div class="col-lg-5 mt-3">
                     <img src="img/index1.svg" alt="COVID-19 Illustrations">
                 </div>
-                <div class="col-lg-6 mt-3">
+                <div class="col-lg-7 mt-3">
                     <h4 class="fw-bold">Apa itu COVID-19 ?</h4>
                     <p>COVID-19 adalah penyakit yang disebabkan oleh virus severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). COVID-19 dapat menyebabkan gangguan sistem pernapasan, mulai dari gejala yang ringan seperti flu, hingga infeksi paru-paru, seperti pneumonia. COVID-19 (coronavirus disease 2019) adalah jenis penyakit baru yang disebabkan oleh virus dari golongan coronavirus, yaitu SARS-CoV-2 yang juga sering disebut virus Corona.</p>
                     <h4 class="fw-bold">Gejala</h4>
@@ -165,10 +165,10 @@
             </div>
             <div class="row mt-5">
                 <h1 class="fs-2 fw-bold text-center mb-3">Bagaimana Cara Mencegahnya?</h1>
-                <div class="col-lg-6 mt-3">
+                <div class="col-lg-5 mt-3">
                     <img src="img/index2.svg" alt="COVID-19 Illustrations 2" class="img-fluid">
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-7">
                     <h4 class="fw-bold mt-3">Cara Pencegahan</h4>
                     <ol type="0">
                         <li><p>Cuci Tangan secara rutin menggunakan air dan sabun atau cairan pembersih tangan berbahan alkohol</p></li>
@@ -196,7 +196,7 @@
     <script src="dist/jquery/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.13.4/jquery.mask.min.js"></script>
     <script src="dist/momentjs/moment-with-locales.min.js"></script>
-    <script src="src/js/index.js"></script>
+    <script src="src/js/index.min.js"></script>
 </body>
 
 </html>
