--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <title>Cek COVID-19 Indonesia</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <meta name="title" content="Cek Covid19 Indonesia">
-    <meta name="description"
-        content="Website informasi sederhana tentang COVID-19 Indonesia dan data per-provinsi Indonesia.">
+    <meta name="description" content="Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Indonesia."/>
+	<meta name="keywords" content="Cek COVID-19 Indonesia" />
+    <meta name="author" content="indrij.vercel.app" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@indrij_" />
+    <meta name="twitter:creator" content="@indrij_" />
+    <meta property="og:title" content="Cek COVID-19 Indonesia" />
+    <meta property="og:type" content="information covid19 website"/>
+    <meta property="og:description" content="Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Indonesia." />
     <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="dist/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="src/css/style.min.css">
