add screenshot and delete file not used

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta property="og:title" content="Cek COVID-19 Indonesia" />
     <meta property="og:type" content="information covid19 website"/>
     <meta property="og:description" content="Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Indonesia." />
+    <meta property="og:image" content="https://cekcovid19id.vercel.app/img/screenshot/index.png" />
     <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="dist/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="src/css/style.min.css">
