--- a/provinsi.html
+++ b/provinsi.html
@@ -19,6 +19,7 @@
     <meta property="og:description"
         content="Data Statistik Kasus COVID-19 Untuk Seluruh Provinsi Di Indonesia." />
     <meta property="og:url" content="https://cekcovid19id.vercel.app/provinsi.html" />
+    <meta property="og:image" content="https://cekcovid19id.vercel.app/img/screenshot/provinsi.png" />
     <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="dist/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="src/css/style.min.css">
