--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Indonesia."/>
 	<meta name="keywords" content="Cek COVID-19 Indonesia" />
     <meta name="author" content="indrij.vercel.app" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@indrij_" />
     <meta name="twitter:creator" content="@indrij_" />
     <meta property="og:title" content="Cek COVID-19 Indonesia" />
