--- a/provinsi.html
+++ b/provinsi.html
@@ -11,7 +11,7 @@
         content="Data Statistik Kasus COVID-19 Untuk Seluruh Provinsi Di Indonesia." />
     <meta name="keywords" content="Data Statistik Seluruh Provinsi Cek COVID-19 Indonesia" />
     <meta name="author" content="indrij.vercel.app" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@indrij_" />
     <meta name="twitter:creator" content="@indrij_" />
     <meta property="og:title" content="Data Statistik Seluruh Provinsi Cek COVID-19 Indonesia" />
